<resources>
    <string name="app_name">Money Lover</string>
    <string name="action_settings">Settings</string>
    <string name="action_category">Category</string>
    <string name="amount_hint">Amount</string>
    <string name="add_new_transaction">Add Transaction</string>
    <string name="new_category_title">New Category Title</string>
    <string name="add_new_category">Add new Category</string>
    <string name="categories_title">Categories</string>
    <string name="action_test">Delete All Transactions</string>
    <string name="fab_description">Add new Transaction</string>
    <string name="left_arrow"><![CDATA[<------]]></string>
    <string name="right_arrow"><![CDATA[------>]]></string>
    <string name="income">Income</string> // expense
    <string name="outcome">Outcome</string>
    <string name="action_report">Report</string>
</resources>